Fixed alignment with About and Hero page. Gave all forms placeholder attribute.

--- a/src/components/AdminDashBoard/About/AboutHeadingForm/AboutHeadingForm.scss
+++ b/src/components/AdminDashBoard/About/AboutHeadingForm/AboutHeadingForm.scss
@@ -1,4 +1,7 @@
 .about-form {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
   margin-left: 0;
 
   .about-heading-control {
